--- a/style.css
+++ b/style.css
@@ -56,9 +56,19 @@
     position: relative;
     left: 430px;
     bottom: 24px;
-
+}
+.dropdown
+{
+    height: 24px;
+    width: 24px;
+    position:relative;
+    left: 90px;
+    bottom: 22px;
+    border-radius: 0px;
+    
 
 }
+
 .YourWork
 {
     width: 100px;
